dnl Process this file with autoconf to produce a configure script.
AC_INIT(parser3pgsql.C)
AM_INIT_AUTOMAKE(parser3pgsqlclient, 3.0g, nodefine)

AM_CONFIG_HEADER(config_auto.h)

dnl Arguments

AC_ARG_WITH(pgsql_inc,[  --with-pgsql_inc[=DIR]      DIR is the PgSQL includes directory],,
	withval="/usr/local/pgsql/include"
)
PGSQL_INC=$withval
AC_SUBST(PGSQL_INC)


dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_AWK

AC_LANG_CPLUSPLUS 
AC_PROG_CXX

dnl Enable building of the convenience library
dnl and set LIBLTDL accordingly
AC_LIBLTDL_CONVENIENCE
dnl Substitute INCLTDL and LIBLTDL in the Makefiles
AC_SUBST(INCLTDL)
AC_SUBST(LIBLTDL)
AC_SUBST(LIBADD_DL)
dnl Check for dlopen support
AC_LIBTOOL_DLOPEN
dnl Configure libtool
AM_PROG_LIBTOOL
dnl Configure libltdl
AC_CONFIG_SUBDIRS(libltdl)

dnl Checks for libraries.

dnl Checks for header files.

AC_CHECK_HEADERS(
stdio.h \
stdlib.h \
string.h
)

dnl Checks for typedefs, structures, and compiler characteristics.

AC_TYPE_SIZE_T

dnl Checks for library functions.

dnl Output makefiles

AC_OUTPUT(libltdl/Makefile Makefile)
